--- a/http/Views/User/Partials/Create.cshtml
+++ b/http/Views/User/Partials/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CreateUser
 
-@using (Html.BeginForm("CreateUser", "User"))
+@using (Html.BeginForm("Create", "User"))
 {
 	<div>
 		@Html.LabelFor(x => x.DisplayName)
