--- a/http/Views/Todo/Partials/Create.cshtml
+++ b/http/Views/Todo/Partials/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CreateTodo
 
-@using (Html.BeginForm("CreateTodo", "Todo"))
+@using (Html.BeginForm("Create", "Todo"))
 {
 	@Html.TextBoxFor(x => x.Title)
 	@Html.DropDownListFor(x => x.AssignedTo, SelectItemHelper.From((IEnumerable<AssignedTo>)ViewBag.Users, x => x.UserName, x => string.Format("{0} ({1})", x.DisplayName, x.TodoItemCount)))
