--- a/http/Views/User/Index.cshtml
+++ b/http/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
 ﻿@model Application.User.Index.Index
 
-@Html.Partial("Users", Model.Users)
-@Html.Partial("CreateUser", new CreateUser())
+@Html.Partial("Partials/Users", Model.Users)
+@Html.Partial("Partials/Create", new CreateUser())
